--- a/StoreBaeltTicketLibrary/StoreBaeltTicketLibrary.csproj
+++ b/StoreBaeltTicketLibrary/StoreBaeltTicketLibrary.csproj
@@ -4,7 +4,10 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="EksternDLL\" />
+  </ItemGroup>
 
 </Project>
