Task 9 Storebæltbroen completed: New ticket library added. New inherited car class added. Price method overwritten to take weekend discounts into account. Tests have been written and run successfully.

--- a/StoreBaeltTicketLibrary/StoreBaeltTicketLibrary.csproj
+++ b/StoreBaeltTicketLibrary/StoreBaeltTicketLibrary.csproj
@@ -10,4 +10,10 @@
     <Folder Include="EksternDLL\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Bridge">
+      <HintPath>..\Bridge\bin\Debug\net8.0\Bridge.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
